--- a/2348551_Lab2.ipynb
+++ b/2348551_Lab2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMwDG1ads8kIjgp8iFTxq7H",
+      "authorship_tag": "ABX9TyOhGZa/NhIY/XozalsAKL1T",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 67,
       "metadata": {
         "id": "vzGTEOm-QBXK"
       },
@@ -51,7 +51,7 @@
       "metadata": {
         "id": "auyBEaC9SLuS"
       },
-      "execution_count": 34,
+      "execution_count": 68,
       "outputs": []
     },
     {
@@ -61,13 +61,13 @@
       ],
       "metadata": {
         "id": "-RosXSaWSZpJ",
-        "outputId": "27267e87-6706-4de8-ed81-bf2307a8bd8a",
+        "outputId": "0866d420-8d5d-4918-b379-6cd99907004f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 224
         }
       },
-      "execution_count": 35,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -89,7 +89,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-d751c5e4-0ec0-4f5e-9311-953fb56378f4\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-bd131a57-5ce3-4aa5-a28a-846c8676262f\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -216,7 +216,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d751c5e4-0ec0-4f5e-9311-953fb56378f4')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bd131a57-5ce3-4aa5-a28a-846c8676262f')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -268,12 +268,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-d751c5e4-0ec0-4f5e-9311-953fb56378f4 button.colab-df-convert');\n",
+              "        document.querySelector('#df-bd131a57-5ce3-4aa5-a28a-846c8676262f button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-d751c5e4-0ec0-4f5e-9311-953fb56378f4');\n",
+              "        const element = document.querySelector('#df-bd131a57-5ce3-4aa5-a28a-846c8676262f');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -293,8 +293,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-3c638eee-d128-4f01-a623-0372e93a60e5\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-3c638eee-d128-4f01-a623-0372e93a60e5')\"\n",
+              "<div id=\"df-7e6848dc-2d7e-4c1d-a44c-e879eb970291\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-7e6848dc-2d7e-4c1d-a44c-e879eb970291')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -413,7 +413,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-3c638eee-d128-4f01-a623-0372e93a60e5 button');\n",
+              "        document.querySelector('#df-7e6848dc-2d7e-4c1d-a44c-e879eb970291 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -424,7 +424,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 35
+          "execution_count": 69
         }
       ]
     },
@@ -438,9 +438,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dyY8yCZmSiSg",
-        "outputId": "17754bfe-e66f-4076-c648-f3eb7a0bd987"
+        "outputId": "e09c4cce-178c-498c-9bad-8ed98979f3a6"
       },
-      "execution_count": 36,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -464,7 +464,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 36
+          "execution_count": 70
         }
       ]
     },
@@ -476,7 +476,7 @@
       "metadata": {
         "id": "K6bkOH9KYubP"
       },
-      "execution_count": 37,
+      "execution_count": 71,
       "outputs": []
     },
     {
@@ -490,19 +490,19 @@
           "height": 1000
         },
         "id": "D6mNlscESpXX",
-        "outputId": "4d4e2897-d431-4a2f-cdb2-3ec1aacf65fb"
+        "outputId": "7804f104-23d7-48e4-83e4-f24e9e5039ff"
       },
-      "execution_count": 38,
+      "execution_count": 72,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<seaborn.axisgrid.PairGrid at 0x7e37287dad40>"
+              "<seaborn.axisgrid.PairGrid at 0x7e3727960af0>"
             ]
           },
           "metadata": {},
-          "execution_count": 38
+          "execution_count": 72
         },
         {
           "output_type": "display_data",
@@ -525,7 +525,7 @@
       "metadata": {
         "id": "KHa8K6G1bosf"
       },
-      "execution_count": 39,
+      "execution_count": 73,
       "outputs": []
     },
     {
@@ -543,9 +543,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dzfmYDLcilXT",
-        "outputId": "9608f8f3-25e8-48bd-e2d4-6690ef9fd483"
+        "outputId": "b561445a-e81c-4066-df1c-e13e55f3abde"
       },
-      "execution_count": 41,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "stream",
@@ -563,13 +563,48 @@
     {
       "cell_type": "code",
       "source": [
+        "x=df[[ 'Distance','Non_Retail_Acres']]\n",
+        "print(y)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XmH62S4-nRNO",
+        "outputId": "25d70635-d475-4e6c-e9a0-7c5316821a40"
+      },
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0      33.2\n",
+            "1      27.5\n",
+            "2      26.5\n",
+            "3      18.6\n",
+            "4      19.3\n",
+            "       ... \n",
+            "501    10.8\n",
+            "502    11.8\n",
+            "503    14.9\n",
+            "504    12.6\n",
+            "505    14.1\n",
+            "Name: MValue, Length: 506, dtype: float64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "from sklearn.model_selection import train_test_split\n",
         "xtrain,xtest,ytrain,ytest = train_test_split(x,y,test_size=0.33,random_state=42)"
       ],
       "metadata": {
         "id": "TlzX-ZFNbjmB"
       },
-      "execution_count": 43,
+      "execution_count": 76,
       "outputs": []
     },
     {
@@ -587,16 +622,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uTWKEqIUZUGa",
-        "outputId": "cdc7792a-6206-4eb9-dd6a-94d2b96f63c7"
+        "outputId": "dc51332f-e280-4f67-8ecd-67f2e8c145bc"
       },
-      "execution_count": 44,
+      "execution_count": 77,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Interceopt:  -15.332210810746496 \n",
-            "Coeffiencients [ 7.71823295 -0.65291673 -0.01373718 -0.21258162]\n"
+            "Interceopt:  38.091225709521446 \n",
+            "Coeffiencients [-1.27856928 -0.9452116 ]\n"
           ]
         }
       ]
@@ -612,19 +647,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lUZOn1fFaK8t",
-        "outputId": "9e714a62-e94b-456b-8d90-7888a208da60"
+        "outputId": "1547cfd9-227c-410a-b7e4-0b4f54a3db1c"
       },
-      "execution_count": 57,
+      "execution_count": 78,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.552374742371587"
+              "0.2581499484166435"
             ]
           },
           "metadata": {},
-          "execution_count": 57
+          "execution_count": 78
         }
       ]
     },
@@ -636,7 +671,7 @@
       "metadata": {
         "id": "vEQwuZC6jck6"
       },
-      "execution_count": 51,
+      "execution_count": 79,
       "outputs": []
     },
     {
@@ -651,15 +686,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fLzHDhAXjR8J",
-        "outputId": "e9accb03-fe3c-4d6b-8654-723359337193"
+        "outputId": "c867cd64-690f-4d78-a7d0-0f5addb35fa3"
       },
-      "execution_count": 56,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "The mean sqaured error of the model is: 27.569771797553905\n"
+            "The mean sqaured error of the model is: 55.770639488944795\n"
           ]
         }
       ]
@@ -675,15 +710,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_uzDGV7ObLz8",
-        "outputId": "15b84236-6c1a-4a60-90e7-021113d4df38"
+        "outputId": "7b5814ed-ce0e-4b17-bbc9-1c9cbc703b06"
       },
-      "execution_count": 55,
+      "execution_count": 81,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0.547013960843103\n"
+            "0.25373417430007594\n"
           ]
         }
       ]
