--- a/2348551_Lab4.ipynb
+++ b/2348551_Lab4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMwTEtexnoDRHbtWlpQzuHG",
+      "authorship_tag": "ABX9TyPlrU3/RNtAeEpOypKxnOmm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 47,
       "metadata": {
         "id": "NsgbbJcMGh3W"
       },
@@ -55,7 +55,7 @@
       "metadata": {
         "id": "xqGfU2VAGnXQ"
       },
-      "execution_count": 3,
+      "execution_count": 48,
       "outputs": []
     },
     {
@@ -69,9 +69,9 @@
           "height": 204
         },
         "id": "wH0jZ73vHJ0t",
-        "outputId": "2accfa96-00a7-40de-de66-a6abe475ce15"
+        "outputId": "9db50d7d-e7eb-4cd4-b46c-cd3e0d03371a"
       },
-      "execution_count": 4,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -93,7 +93,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-c97756e9-7d23-43dc-9018-bd62a92323ea\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-3d184a32-74e4-4f98-8102-f002a4af27a6\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -172,7 +172,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c97756e9-7d23-43dc-9018-bd62a92323ea')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3d184a32-74e4-4f98-8102-f002a4af27a6')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -224,12 +224,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-c97756e9-7d23-43dc-9018-bd62a92323ea button.colab-df-convert');\n",
+              "        document.querySelector('#df-3d184a32-74e4-4f98-8102-f002a4af27a6 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-c97756e9-7d23-43dc-9018-bd62a92323ea');\n",
+              "        const element = document.querySelector('#df-3d184a32-74e4-4f98-8102-f002a4af27a6');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -249,8 +249,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-bf384f99-0018-4727-a585-38bd125ba18b\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-bf384f99-0018-4727-a585-38bd125ba18b')\"\n",
+              "<div id=\"df-c031ceb7-f85e-45f1-a953-d44df83103eb\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c031ceb7-f85e-45f1-a953-d44df83103eb')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -369,7 +369,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-bf384f99-0018-4727-a585-38bd125ba18b button');\n",
+              "        document.querySelector('#df-c031ceb7-f85e-45f1-a953-d44df83103eb button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -380,7 +380,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 49
         }
       ]
     },
@@ -393,7 +393,7 @@
       "metadata": {
         "id": "wPyiGw7fNL4h"
       },
-      "execution_count": 8,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -411,9 +411,9 @@
           "height": 542
         },
         "id": "NeHooGiljv3M",
-        "outputId": "69b7e4db-5af1-485f-e14a-c5106c5ab86c"
+        "outputId": "849d0040-83cc-4ca7-e6f0-e6a7415dc769"
       },
-      "execution_count": 14,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "display_data",
@@ -435,7 +435,7 @@
       "metadata": {
         "id": "W532Ev7tjXPs"
       },
-      "execution_count": 9,
+      "execution_count": 52,
       "outputs": []
     },
     {
@@ -446,7 +446,7 @@
       "metadata": {
         "id": "-VDVAFk1NcX9"
       },
-      "execution_count": 10,
+      "execution_count": 53,
       "outputs": []
     },
     {
@@ -457,7 +457,7 @@
       "metadata": {
         "id": "7yJa_5AANc3v"
       },
-      "execution_count": 11,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -478,7 +478,7 @@
         "\n",
         "y_pred = model1.predict(X_test_p)\n",
         "\n",
-        "print('For degree = 2')\n",
+        "print('For degree  2')\n",
         "r2 = r2_score(y1test, y_pred)\n",
         "print(f'R-squared: {r2}')\n",
         "mse = mean_squared_error(y1test, y_pred)\n",
@@ -491,45 +491,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "heud9y_4kb6b",
-        "outputId": "8bc3ce0a-5343-4e13-d137-93603ecc6923"
+        "outputId": "599a119f-2b7c-401b-c73e-891b71084759"
       },
-      "execution_count": 22,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "For degree = 2\n",
+            "For degree  2\n",
             "R-squared: 0.6263280190072713\n",
             "Mean Squared Error: 26.527376101991102\n",
             "Mean Absolute Error: 3.6628821400645486\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "model1 = LinearRegression()\n",
-        "model1.fit(x1train, y1train)\n",
-        "print(\"Intercept:\",model1.intercept_)\n",
-        "print(\"Coefficients\",model1.coef_)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "OF_-LHnrNpps",
-        "outputId": "f36a1589-74a6-49f2-e95f-60696b9f7909"
-      },
-      "execution_count": 20,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Intercept: 1036.3550507577772\n",
-            "Coefficients [-1.26321314]\n"
           ]
         }
       ]
@@ -546,19 +519,19 @@
           "height": 447
         },
         "id": "rfsmUcAyr_Iv",
-        "outputId": "5fb6995f-7771-44cc-91fc-6676c521402d"
+        "outputId": "695601f8-7fb7-48c0-fdb2-773fd197d270"
       },
-      "execution_count": 24,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.collections.PathCollection at 0x7e46bc595d80>"
+              "<matplotlib.collections.PathCollection at 0x7e46bc1808e0>"
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 56
         },
         {
           "output_type": "display_data",
@@ -584,15 +557,15 @@
         "\n",
         "y_pred = model2.predict(X_test_p)\n",
         "\n",
-        "print('For degree = 3')\n",
+        "print('For degree  3')\n",
         "r2 = r2_score(y1test, y_pred)\n",
         "print(f'R-squared: {r2}')\n",
         "\n",
-        "# Calculate Mean Squared Error (MSE)\n",
+        "\n",
         "mse = mean_squared_error(y1test, y_pred)\n",
         "print(f'Mean Squared Error: {mse}')\n",
         "\n",
-        "# Calculate Mean Absolute Error (MAE)\n",
+        "\n",
         "mae = mean_absolute_error(y1test, y_pred)\n",
         "print(f'Mean Absolute Error: {mae}')"
       ],
@@ -601,15 +574,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CHL3iQadsJYe",
-        "outputId": "6d3e6ee6-65ca-4ad8-a036-2a32b258a191"
+        "outputId": "1ca5deb5-f703-484d-eece-547e883c6002"
       },
-      "execution_count": 25,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "For degree = 3\n",
+            "For degree  3\n",
             "R-squared: 0.634678388154881\n",
             "Mean Squared Error: 25.934574408964476\n",
             "Mean Absolute Error: 3.7779984010557417\n"
@@ -629,19 +602,19 @@
           "height": 447
         },
         "id": "GcnZk80esL_a",
-        "outputId": "8ef7554a-93da-4dc8-b52b-872b070afb37"
+        "outputId": "733ff66e-cd90-400b-f6ef-160004b1433a"
       },
-      "execution_count": 26,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.collections.PathCollection at 0x7e46bc41ca90>"
+              "<matplotlib.collections.PathCollection at 0x7e46bc2fe5c0>"
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 58
         },
         {
           "output_type": "display_data",
@@ -667,15 +640,15 @@
         "\n",
         "y_pred = model3.predict(X_test_p)\n",
         "\n",
-        "print('For degree = 4')\n",
+        "print('For degree  4')\n",
         "r2 = r2_score(y2test, y_pred)\n",
         "print(f'R-squared: {r2}')\n",
         "\n",
-        "# Calculate Mean Squared Error (MSE)\n",
+        "\n",
         "mse = mean_squared_error(y2test, y_pred)\n",
         "print(f'Mean Squared Error: {mse}')\n",
         "\n",
-        "# Calculate Mean Absolute Error (MAE)\n",
+        "\n",
         "mae = mean_absolute_error(y2test, y_pred)\n",
         "print(f'Mean Absolute Error: {mae}')"
       ],
@@ -684,15 +657,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ANJxlyaFsmsu",
-        "outputId": "d315565f-f0e1-40c6-ac62-364a91c7dfcd"
+        "outputId": "174a3b4d-fe61-488a-d3c1-7893fd9319fd"
       },
-      "execution_count": 30,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "For degree = 4\n",
+            "For degree  4\n",
             "R-squared: 0.6941666046410397\n",
             "Mean Squared Error: 21.679295208217564\n",
             "Mean Absolute Error: 3.1852525641917366\n"
@@ -712,19 +685,19 @@
           "height": 447
         },
         "id": "aNNHJOnZs4_C",
-        "outputId": "52229ce5-eecc-435f-e59d-dd89f54b93d1"
+        "outputId": "d2f03aca-405f-4bce-a6c6-b8f10ad204e5"
       },
-      "execution_count": 31,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.collections.PathCollection at 0x7e46bc501390>"
+              "<matplotlib.collections.PathCollection at 0x7e46bc037970>"
             ]
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 60
         },
         {
           "output_type": "display_data",
@@ -750,15 +723,13 @@
         "\n",
         "y_pred = model3.predict(X_test_p)\n",
         "\n",
-        "print('For degree = 5')\n",
+        "print('For degree  5')\n",
         "r2 = r2_score(y2test, y_pred)\n",
         "print(f'R-squared: {r2}')\n",
         "\n",
-        "# Calculate Mean Squared Error (MSE)\n",
         "mse = mean_squared_error(y2test, y_pred)\n",
         "print(f'Mean Squared Error: {mse}')\n",
         "\n",
-        "# Calculate Mean Absolute Error (MAE)\n",
         "mae = mean_absolute_error(y2test, y_pred)\n",
         "print(f'Mean Absolute Error: {mae}')"
       ],
@@ -767,15 +738,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gCIDPel-tIh2",
-        "outputId": "4c2181f2-7482-4915-9d4d-8894517d7dc9"
+        "outputId": "9a0c264e-9ec4-4484-82d1-09af1e065131"
       },
-      "execution_count": 32,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "For degree = 5\n",
+            "For degree  5\n",
             "R-squared: 0.7042085681914689\n",
             "Mean Squared Error: 20.96746093640956\n",
             "Mean Absolute Error: 3.3119410844488186\n"
@@ -795,19 +766,19 @@
           "height": 447
         },
         "id": "UmJdZPcRtKdQ",
-        "outputId": "19b3967c-9043-4305-a9b3-633b4692863e"
+        "outputId": "48612fe0-2562-4ecc-9746-0dcd7929b934"
       },
-      "execution_count": 33,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.collections.PathCollection at 0x7e46bc34bb50>"
+              "<matplotlib.collections.PathCollection at 0x7e46bc0cd840>"
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 62
         },
         {
           "output_type": "display_data",
